# libzippp

./: meson.build
src/: libzippp.h
